# robotic-psalms

./: .context-ignore  .coverage  .gitignore  .roomodes  CLAUDE.md  README.md  artistic_specification.md  project_specification.md  project_specification_v2.md  project_specification_v3.md  pyproject.toml
docs/: index.md
docs/archive/: pseudocode_tts_fix_v1.md
docs/research-reports/: FormantShiftingPythonMethods.md  input_enhancement_analysis.md
examples/: config.yml  psalm.txt
memory-bank/: activeContext.md  globalContext.md  progress.md  spec-pseudocode.md
memory-bank/feedback/: architect-feedback.md  code-feedback.md  debug-feedback.md  docs-writer-feedback.md  holistic-reviewer-feedback.md  integration-feedback.md  post-deployment-monitoring-mode-feedback.md  refinement-optimization-mode-feedback.md  security-review-feedback.md  sparc-feedback.md  spec-pseudocode-feedback.md  tdd-feedback.md
memory-bank/mode-specific/: architect.md  code.md  debug.md  devops.md  docs-writer.md  holistic-reviewer.md  integration.md  post-deployment-monitoring-mode.md  refinement-optimization-mode.md  security-review.md  sparc.md  spec-pseudocode.md  system-refiner.md  tdd.md
memory-bank/mode-specific/holistic-reviewer/: detailed_review_report_20250413.md
scripts/: generate_midi_fixtures.py  install_all.sh  install_tts.sh
src/robotic_psalms/: __init__.py  architecture.md  cli.py  config.py
src/robotic_psalms/synthesis/: __init__.py  effects.py  sacred_machinery.py  vox_dei.py
src/robotic_psalms/synthesis/tts/: __init__.py  base.py
src/robotic_psalms/synthesis/tts/engines/: espeak.py
src/robotic_psalms/utils/: midi_parser.py
tests/: test_installation.py  test_sacred_machinery.py
tests/fixtures/: multi_track.mid  simple_melody.mid
tests/synthesis/: effects.py  test_effects.py  test_vox_dei.py
tests/synthesis/tts/: test_espeak.py
tests/utils/: test_midi_parser.py
