[project]
name = "robotic-psalms"
version = "0.1.0"
description = "Ethereal computerized vocal arrangements of Latin psalms"
authors = [
    {name = "Robotic Psalms Project"}
]
dependencies = [
    "numpy>=1.22.0",
    "scipy>=1.8.0",
    "librosa>=0.9.0",
    "mido>=1.2.10",
    "python-rtmidi>=1.4.9",
    "sounddevice>=0.4.4",
    "espeak-ng>=0.1.0",
    "python-festival>=0.1.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "matplotlib>=3.5.0",
    "pyopengl>=3.1.6",
    "soundfile>=0.10.3",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=0.900",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88